--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,10 @@
 {
     "env": {
-        "browser": true,
+        "browser": false,
         "es2021": true
     },
     "extends": [
-        "plugin:vue/essential",
-        "google"
+        "plugin:vue/essential"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
