--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "eslint": "eslint src --ext .ts"
+    "eslint": "eslint src --ext .ts",
+    "run": "ts-node src/bot/main.ts"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.21",
     "@types/ws": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -19,11 +21,14 @@
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.5.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
+    "js-yaml": "^4.1.0",
     "mirai-ts": "^2.2.1",
     "ws": "^8.5.0"
   }
