--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qq-bot",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A qq bot plugin for myself.",
   "main": "index.js",
   "repository": "git@github.com:lnkkerst/qq-bot",
@@ -9,11 +9,13 @@
   "private": true,
   "scripts": {
     "eslint": "eslint src --ext .ts",
-    "run": "ts-node src/bot/main.ts"
+    "start": "ts-node src/bot/main.ts",
+    "dev": "ts-node src/bot/main.ts"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
     "@types/ws": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -29,7 +31,9 @@
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "mirai-ts": "^2.2.1",
+    "typescript-collections": "^1.3.3",
     "ws": "^8.5.0"
   }
 }
