--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "git@github.com:lnkkerst/qq-bot",
   "author": "lnkkerst <1593510417@qq.com>",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "private": true,
   "scripts": {
     "eslint": "eslint src --ext .ts",
